langkit/sustained/src/gpr_parser-implementation-c.ads


   type gpr_unit_provider is new System.Address;
   --  Interface to fetch analysis units from a name and a unit kind.
   --
   --  The unit provider mechanism provides an abstraction which assumes that
   --  to any couple (unit name, unit kind) we can associate at most one source
   --  file. This means that several couples can be associated to the same
   --  source file, but on the other hand, only one one source file can be
   --  associated to a couple.
   --
   --  This is used to make the semantic analysis able to switch from one
   --  analysis units to another.
   --
   --  See the documentation of each unit provider for the exact semantics of
   --  the unit name/kind information.

   -------------------------
   -- Analysis primitives --
   -------------------------

   function gpr_allocate_analysis_context
     return gpr_analysis_context
     with Export,
          Convention    => C,
          External_name => "gpr_allocate_analysis_context";
   --  Allocate a new analysis context.

   procedure gpr_initialize_analysis_context
     (Context       : gpr_analysis_context;
      Charset       : chars_ptr;
      File_Reader   : gpr_file_reader;
      Unit_Provider : gpr_unit_provider;
      Event_Handler : gpr_event_handler;
      With_Trivia   : int;
      Tab_Stop      : int)
      with Export,
           Convention    => C,
           External_name => "gpr_initialize_analysis_context";
   --  Initialize an analysis context. Must be called right after
   --  ``Allocate_Context`` on its result.
   --
   --  Having separate primitives for allocation/initialization allows library
   --  bindings to have a context wrapper (created between the two calls) ready
   --  when callbacks that happen during context initialization (for instance
   --  "unit parsed" events).

   function gpr_context_incref
     (Context : gpr_analysis_context)
      return gpr_analysis_context
      with Export        => True,
           Convention    => C,
           External_name => "gpr_context_incref";
   --  Increase the reference count to an analysis context. Return the
   --  reference for convenience.

   procedure gpr_context_decref
     (Context : gpr_analysis_context)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_context_decref";
   --  Decrease the reference count to an analysis context. Destruction happens
   --  when the ref-count reaches 0.

   function gpr_context_symbol
     (Context : gpr_analysis_context;
      Text    : access gpr_text;
      Symbol  : access gpr_symbol_type) return int
      with Export, Convention => C,
           External_name => "gpr_context_symbol";
   --  If the given string is a valid symbol, yield it as a symbol and return
   --  true. Otherwise, return false.

   procedure gpr_context_discard_errors_in_populate_lexical_env
     (Context : gpr_analysis_context;
      Discard : int)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_context_discard_errors_in_populate_lexical_env";
   --  Debug helper. Set whether ``Property_Error`` exceptions raised in
   --  ``Populate_Lexical_Env`` should be discarded. They are by default.

   function gpr_get_analysis_unit_from_file
     (Context           : gpr_analysis_context;
      Filename, Charset : chars_ptr;
      Reparse           : int;
      Rule              : gpr_grammar_rule)
      return gpr_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name =>
              "gpr_get_analysis_unit_from_file";
   --  Create a new analysis unit for ``Filename`` or return the existing one
   --  if any. If ``Reparse`` is true and the analysis unit already exists,
   --  reparse it from ``Filename``.
   --
   --  ``Rule`` controls which grammar rule is used to parse the unit.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as file opening, decoding, lexing or parsing
   --  failure, return an analysis unit anyway: errors are described as
   --  diagnostics of the returned analysis unit.

   function gpr_get_analysis_unit_from_buffer
     (Context           : gpr_analysis_context;
      Filename, Charset : chars_ptr;
      Buffer            : chars_ptr;
      Buffer_Size       : size_t;
      Rule              : gpr_grammar_rule)
      return gpr_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name =>
              "gpr_get_analysis_unit_from_buffer";
   --  Create a new analysis unit for ``Filename`` or return the existing one
   --  if any. Whether the analysis unit already exists or not, (re)parse it
   --  from the source code in ``Buffer``.
   --
   --  ``Rule`` controls which grammar rule is used to parse the unit.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as file opening, decoding, lexing or parsing
   --  failure, return an analysis unit anyway: errors are described as
   --  diagnostics of the returned analysis unit.


   procedure gpr_unit_root
     (Unit     : gpr_analysis_unit;
      Result_P : gpr_base_entity_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_root";
   --  Return the root node for this unit, or ``NULL`` if there is none.

   procedure gpr_unit_first_token
     (Unit  : gpr_analysis_unit;
      Token : access gpr_token)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_first_token";
   --  Return a reference to the first token scanned in this unit.

   procedure gpr_unit_last_token
     (Unit  : gpr_analysis_unit;
      Token : access gpr_token)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_last_token";
   --  Return a reference to the last token scanned in this unit.

   function gpr_unit_token_count
     (Unit : gpr_analysis_unit) return int
      with Export        => True,
           Convention    => C,
           External_Name => "gpr_unit_token_count";
   --  Return the number of tokens in this unit.

   function gpr_unit_trivia_count
     (Unit : gpr_analysis_unit) return int
      with Export        => True,
           Convention    => C,
           External_Name => "gpr_unit_trivia_count";
   --  Return the number of trivias in this unit. This is 0 for units that were
   --  parsed with trivia analysis disabled.

   procedure gpr_unit_lookup_token
     (Unit   : gpr_analysis_unit;
      Sloc   : access gpr_source_location;
      Result : access gpr_token)
      with Export        => True,
           Convention    => C,
           External_Name => "gpr_unit_lookup_token";
   --  Look for a token in this unit that contains the given source location.
   --  If this falls before the first token, return the first token. If this
   --  falls between two tokens, return the token that appears before. If this
   --  falls after the last token, return the last token. If there is no token
   --  in this unit, return no token.

   procedure gpr_unit_dump_lexical_env
     (Unit : gpr_analysis_unit)
      with Export        => True,
           Convention    => C,
           External_Name => "gpr_unit_dump_lexical_env";

   function gpr_unit_filename
     (Unit : gpr_analysis_unit)
      return chars_ptr
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_filename";
   --  Return the filename this unit is associated to.
   --
   --  The returned string is dynamically allocated and the caller must free it
   --  when done with it.

   function gpr_unit_diagnostic_count
     (Unit : gpr_analysis_unit) return unsigned
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_diagnostic_count";
   --  Return the number of diagnostics associated to this unit.

   function gpr_unit_diagnostic
     (Unit         : gpr_analysis_unit;
      N            : unsigned;
      Diagnostic_P : access gpr_diagnostic) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_diagnostic";
   --  Get the Nth diagnostic in this unit and store it into ``*diagnostic_p``.
   --  Return zero on failure (when N is too big).

   function gpr_unit_context
     (Unit : gpr_analysis_unit)
      return gpr_analysis_context
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_context";
   --  Return the context that owns this unit.

   procedure gpr_unit_reparse_from_file
     (Unit : gpr_analysis_unit; Charset : chars_ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_reparse_from_file";
   --  Reparse an analysis unit from the associated file.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as decoding, lexing or parsing failure,
   --  diagnostic are emitted to explain what happened.

   procedure gpr_unit_reparse_from_buffer
     (Unit        : gpr_analysis_unit;
      Charset     : chars_ptr;
      Buffer      : chars_ptr;
      Buffer_Size : size_t)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_reparse_from_buffer";
   --  Reparse an analysis unit from a buffer.
   --
   --  Use ``Charset`` in order to decode the source. If ``Charset`` is empty
   --  then use the context's default charset.
   --
   --  If any failure occurs, such as decoding, lexing or parsing failure,
   --  diagnostic are emitted to explain what happened.

   function gpr_unit_populate_lexical_env
     (Unit : gpr_analysis_unit
   ) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_unit_populate_lexical_env";
   --  Create lexical environments for this analysis unit, according to the
   --  specifications given in the language spec.
   --
   --  If not done before, it will be automatically called during semantic
   --  analysis. Calling it before enables one to control where the latency
   --  occurs.
   --
   --  Depending on whether errors are discarded (see
   --  ``Discard_Errors_In_Populate_Lexical_Env``), return ``0`` on failure and
   --  ``1`` on success.

   ---------------------------------
   -- General AST node primitives --
   ---------------------------------

   function gpr_is_equivalent
     (L, R : gpr_base_entity_Ptr) return gpr_bool
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_is_equivalent";
   --  Return whether the two nodes are equivalent.

   function gpr_hash
     (Node : gpr_base_entity_Ptr) return uint32_t
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_hash";
   --  Return a hash for the given node.

   function gpr_node_kind
     (Node : gpr_base_entity_Ptr) return gpr_node_kind_enum
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_kind";
   --  Return the kind of this node.

   procedure gpr_kind_name
     (Kind : gpr_node_kind_enum; Result : access gpr_text)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_kind_name";
   --  Helper for textual dump: return the kind name for this node. The
   --  returned string is a copy and thus must be free'd by the caller.

   function gpr_node_unit
     (Node : gpr_base_entity_Ptr) return gpr_analysis_unit
      with Export => True,
           Convention => C,
           External_Name => "gpr_node_unit";
   --  Return the analysis unit that owns this node.
